# CGCopy

./: .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  jest.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: build.yml
.husky/: pre-commit
collection/: CulturasGastronomicas-Restaurantes.json  CulturasGastronomicas.json  CulturasGastronomicasGraphQL.json  ProductosGraphQL.json  Restaurantes-Ciudades.json  ciudades.json  culturasgastronomicas-paises.json  culturasgastronomicas-productos.json  culturasgastronomicas-recetas.json  paises.json  productos.json  recetas.json  restaurantes.json
jmeter/: PruebasCulturasGastronomicas.jmx
reports/: index.html
sql/: 01_culturas.sql  02_paises.sql  04_ciudades.sql  06_restaurantes.sql  07_cultura_producto.sql  08_cultura_pais.sql  09_cultura_restaurante.sql
sql_generator/: main.py
sql_generator/utils/: generators.py
src/: app.controller.ts  app.module.ts  app.service.ts  schema.gql  typeorm-config.common.ts  typeorm-config.testing.ts  typeorm-config.ts
src/auth/: auth.module.ts  auth.service.spec.ts  auth.service.ts
src/ciudad/: ciudad.controller.spec.ts  ciudad.controller.ts  ciudad.dto.ts  ciudad.entity.ts  ciudad.module.ts  ciudad.resolver.ts  ciudad.service.spec.ts  ciudad.service.ts
src/culturagastronomica-pais/: culturagastronomica-pais.controller.spec.ts  culturagastronomica-pais.controller.ts  culturagastronomica-pais.module.ts  culturagastronomica-pais.service.spec.ts  culturagastronomica-pais.service.ts
(+70 files in other folders)
